--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,12 +17,16 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <Label Content="Context" Grid.Row="0" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="ContextBox" Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" Text="{Binding Context}" FontSize="16" TextWrapping="Wrap" Grid.ColumnSpan="2"/>
-        <Label Content="Question" Grid.Row="2" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="QuestionBox" Grid.Row="3" Grid.Column="0" Margin="5,5,5,5" Text="{Binding Question}" FontSize="16" TextWrapping="Wrap" Grid.ColumnSpan="2"/>
-        <Button x:Name="AskButton" Click="AskButton_Click" Content="Ask!" Grid.Row="4" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <Label Content="Agents' Response" Grid.Row="0" Grid.Column="2" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
-        <RichTextBox x:Name="ResponseBox" x:FieldModifier="public" Grid.Row="1" Grid.Column="2" Grid.RowSpan="4" FontSize="14" Margin="5,5,5,5" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" Grid.ColumnSpan="2"/>
+        <Label x:Name="lblSearchContext" Content="Search Context" Grid.Row="0" Grid.Column="0" Margin="5,10,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtSearchContext" Grid.Row="1" Grid.Column="0" Margin="5,5,5,10" Text="{Binding Context}" FontSize="16" TextWrapping="Wrap" Grid.ColumnSpan="2"/>
+        <Label x:Name="lblQuestion" Content="Question" Grid.Row="3" Grid.Column="0" Margin="5,123,5,90" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Label x:Name="lblAgents" Content="Available Agents:" Grid.Row="3" Grid.Column="0" Margin="0,10,10,195" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtQuestion" Grid.Row="3" Grid.Column="0" Margin="5,153,5,5" Text="{Binding Question}" FontSize="16" TextWrapping="Wrap" Grid.ColumnSpan="2"/>
+        <Button x:Name="btnAskButton" Click="AskButton_Click" Content="Ask!" Grid.Row="4" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <Label x:Name="lblAgentsResponse" Content="Agents' Response" Grid.Row="0" Grid.Column="2" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" Grid.ColumnSpan="2"/>
+        <RichTextBox x:Name="txtAgentsResponse" x:FieldModifier="public" Grid.Row="1" Grid.Column="2" Grid.RowSpan="4" FontSize="14" Margin="5,5,5,5" ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" Grid.ColumnSpan="2"/>
+        <Grid Grid.Row="3" Margin="5,33,10,115">
+            <CheckBox x:Name="chkAgentSearch" Content="Web Search Agent" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="27" Width="207"/>
+        </Grid>
     </Grid>
 </Window>
